# rustris

./: .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
resources/music/: LICENSE.txt
src/: event.rs  main.rs  util.rs
src/states/: PlayState.rs  mod.rs
src/states/game_over_state/: mod.rs
src/states/intro_state/: 2  mod.rs
src/states/menu_state/: mod.rs  option.rs  spawner.rs
src/states/play_state/: bag.rs  game_over.rs  input_state.rs  mod.rs  shapes.rs  tetromino.rs  ui_element.rs  util.rs  well.rs
src/states/shared/: option.rs
